test/src/test/k3s/kafka-backup/replay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-backup-replay
spec:
  rules:
    - host: kafka-backup-replay.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-backup-replay
                port:
                  name: http
