test/src/test/k3s/kafka-backup/replay/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kafka-backup-replay
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: kafka-backup
    app.kubernetes.io/component: replay
